@@ -1,3 +1,8 @@
+2016-02-04  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSData.m: Fix for decoding base64 with unknown characters
+	after a trailing '='
+
 2016-01-29  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/Additions/GSMime.m: keep key=value pairs in structured fields
